final_project/src/k8s-manifest-repo/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "backend-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:709861978753:certificate/1d4acc6c-26b9-4576-888d-d99646945ff7
    alb.ingress.kubernetes.io/tags: createdBy=aws-load-balancer-controller
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: www.kogoon.me
spec:
  rules:
    - http:
        paths:
         - path: /
           backend:
             serviceName: ssl-redirect
             servicePort: use-annotation
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: "flask-login"
                port:
                  number: 5002
         - path: /register
           pathType: Prefix
           backend:  
             service:
               name: "flask-register"
               port:
                 number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "rollout-bluegreen-active"
                port:
                  number: 80
